# graphbus-core

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile.api  INVESTOR_READINESS.md  LICENSE  Makefile  PROGRESS.md  README.md  ROADMAP.md  SECURITY.md  TRANCHE_4.5.md  TRANCHE_5.md  TUI_BUG_FIX.md  TUI_CHAT_INTERFACE.md  TUI_IMPLEMENTATION.md  graphbus.spec  pyproject.toml  pytest.ini  requirements.txt  setup.py  test_chat_tui.py  test_output.txt  test_websocket_integration.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml  release-binaries.yml  test.yml
.graphbus/: agents.json  build_summary.json  graph.json  negotiations.json
.graphbus/contracts/: HelloService_1.0.0.json  LoggerService_1.0.0.json  PrinterService_1.0.0.json
.venv-cgr/: pyvenv.cfg
docs/: TUI_GUIDE.md
docs/core/: design.md  pipeline-additional-info.md  pipeline.md  progress.md  runtime.md  sample_proj.md
examples/hello_graphbus/: README.md  __init__.py  build.py  run.py
examples/hello_world_mcp/: MCP_SETUP_COMPLETE.md  QUICK_START.md  README.md  claude-code-config.json  test_mcp_setup.sh
examples/news_summarizer/: README.md  build.py
graphbus-mcp-server/: ARCHITECTURE_CONTEXT.md  README.md  mcp_server_design.md  mcp_tools.json  mcp_tools_enhanced.json  server.py
graphbus_agent/: README.md  __init__.py  __main__.py  auth.py  claude_client.py  runner.py
graphbus_api/: .env.example  README.md  __init__.py  auth.py  firebase_auth.py  main.py  store.py
graphbus_api/routes/: auth.py  (+5 more)
graphbus_cli/: __init__.py  hooks.py  main.py  websocket_server.py
graphbus_core/: __init__.py  auth.py  config.py  constants.py  decorators.py  exceptions.py  namespace.py  node_base.py  utils.py
scripts/: build_binary.sh  test-and-deploy.sh
tests/: README.md  __init__.py  conftest.py  test_rag_quorum.py
(+3713 files in other folders)
