[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "graphbus"
version = "0.1.0"
description = "Multi-agent orchestration framework — LLM-powered agents negotiate, refactor, and evolve your codebase"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "GraphBus Team", email = "hello@graphbus.com"}
]
keywords = ["agents", "llm", "orchestration", "multi-agent", "code-evolution", "negotiation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "networkx>=3.0",
    "litellm>=1.0.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "PyYAML>=6.0",
    "websockets>=12.0",
    "httpx>=0.25.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "pytest-cov>=4.0.0"]
server = ["firebase-admin>=6.0.0", "fastapi>=0.100.0", "uvicorn[standard]>=0.24.0"]
tui = ["textual>=0.47.0"]

[project.urls]
Homepage = "https://graphbus.com"
Documentation = "https://graphbus.com/docs"
Repository = "https://github.com/graphbus/graphbus-core"
"Bug Tracker" = "https://github.com/graphbus/graphbus-core/issues"

[project.scripts]
graphbus = "graphbus_cli.main:cli"
graphbus-agent = "graphbus_agent.__main__:main"

[tool.setuptools.packages.find]
exclude = ["graphbus_api*", "tests*", "examples*", "htmlcov*"]
